Fix Communities Spacing (#90)
* Fix communities spacing

* Undo event api change

--- a/src/pages/communities/style.less
+++ b/src/pages/communities/style.less
@@ -3,21 +3,27 @@
 
 .communities {
   .section();
+  padding: 80px 0;
 
   .communities-container {
+    margin: auto;
+    max-width: 1200px;
+    width: 100%;
     text-align: center;
-    width: 100vw;
 
     a {
       color: @black;
+      text-decoration: none;
     }
 
     .community {
       display: inline-block;
-      height: 5em;
-      margin: 20px;
+      margin: 10px;
+      height: 100px;
+      position: relative;
       text-align: left;
       transition: 0.2s;
+      width: 350px;
 
       &:hover {
         transform: scale(1.05);
@@ -25,17 +31,23 @@
 
       img {
         height: 100%;
-        margin-right: 10px;
       }
 
       .info {
-        display: inline-block;
-        text-align: left;
+        position: absolute;
+        left: 120px;
+        top: 0;
+        align-items: center;
         height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: left;
+        width: 230px;
         vertical-align: top;
 
         h1 {
-          font-size: 2.5em;
+          width: 100%;
+          font-size: 2em;
           font-weight: bolder;
           margin-bottom: 5px;
           &.ai {
@@ -52,6 +64,30 @@
           }
           &.innovate {
             color: @purple;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .communities {
+    .communities-container {
+      .community {
+        width: 280px;
+        height: 80px;
+
+        .info {
+          left: 90px;
+          width: 190px;
+
+          h1 {
+            font-size: 1.6em;
+          }
+
+          h2 {
+            font-size: 0.8em;
           }
         }
       }
